Enable compact object headers on JDK 25+ (#1912)
Enable compact object headers on JDK 25+